Fix chart alignment

--- a/openwisp_utils/admin_theme/static/admin/css/ow-dashboard.css
+++ b/openwisp_utils/admin_theme/static/admin/css/ow-dashboard.css
@@ -12,7 +12,6 @@
 
 /* Each chart card */
 .js-plotly-plot {
-  display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
